--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,29 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
+.card {
+  padding: 1rem;
+  border: 1px solid #aaa;
+}
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
+body {
+  font-family: "Inter", Arial, sans-serif;
+}
+
 .main-nav {
-  background-color: darkblue;
-  color: white;
+  background-color: rgb(7, 9, 110);
+  color: rgb(138, 138, 138);
   height: 60px;
   display: flex;
   align-items: center;
@@ -13,7 +36,7 @@
 }
 .main-nav .nav-links .nav-item {
   text-decoration: none;
-  color: white;
+  color: rgb(138, 138, 138);
 }
 .main-nav .nav-links .nav-item.active {
   color: cornflowerblue;
