--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,28 +1,9 @@
-.main-nav{
-    background-color: darkblue;
-    color: white;
-    height: 60px;
-    display:flex;
-    align-items: center;
+// importante, que aunque los elementos dentro de las carpetas tengan guion bajo, no se los pone, ya que los toma igualmente
 
-    /*.main-nav .nav-links{
-        padding: 2rem;
-    } en vez de colocar eso en el styles, aca lo podemos colocar dentro que va a ser lo mismo*/
-    .nav-links{
-        padding: 2rem;
+@import "abstracts/variables";
+@import "components/card";
+@import "base/reset";
+@import "base/typography";
+@import "layout/header";
 
-        .nav-item{
-            text-decoration: none;
-            color: white;
-            &.active{
-                // cuando le pongo un &.clase, lo que hace, es buscar una clase que tenga los dos nombres dentro, osea que esten anidados
-                color: cornflowerblue;
-                font-weight: bold;
-            }
-            &:hover{
-                font-size: 1.2rem;
-                color: darkred;
-            }
-        }        
-    }
-}
+@import "pages/home"
